# ProgLang_lab1

./: CMakeLists.txt  Lang.g4  README.md  main.cpp
report/: ЯП_1_лаба_Р4119_Суровикин.docx
src/ast/: AST.h
src/parser/: ErrorCollector.cpp  ErrorCollector.h  ParserModule.cpp  ParserModule.h
src/visitor/: ASTBuilder.cpp  ASTBuilder.h
tests/: ex_full.txt  example.txt  out.txt
